src/RegAlloc/ReadAssem.java
/* Generated By:JavaCC: Do not edit this line. ReadAssem.java */
package RegAlloc;
import java.util.*;

public class ReadAssem implements ReadAssemConstants {
        static private Mips.MipsFrame masterFrame = new Mips.MipsFrame();

        static Vector<Temp.Temp>  tempVector = null;
        static Vector<Temp.Label> labelVector = null;

        static Temp.Temp getTemp(int num)
        {
            if (num < 0)
                {
                    System.err.println("ERROR: getTemp(" + num + ")");
                    return null;
                }
            if (null == tempVector)
                {
                    tempVector = new Vector<Temp.Temp>();
            for (int i = 0; i < 32; i++)
            { tempVector.add(new Temp.Temp(i)); }
                }

            for (int i = tempVector.size(); i <= num; i++)
                tempVector.add(new Temp.Temp());
            return tempVector.elementAt(num);
        }

        static Temp.Label getLabel(String s)
        {
            if (null == labelVector) labelVector = new Vector<Temp.Label>();

            int num = Integer.MIN_VALUE;
            if (s.startsWith("L"))
                num = parseInt(s.substring(1));
            if (num == Integer.MIN_VALUE) return new Temp.Label(s);

            for (int i = labelVector.size(); i <= num; i++)
                labelVector.add(new Temp.Label());
            return labelVector.elementAt(num);
        }

        static int parseInt(String s)
        {
            try
                {
                    return Integer.parseInt(s);
                }
            catch (Exception e)
                {
                    // System.err.println("ERROR: parseInt(" + s + ")");
                    return Integer.MIN_VALUE;
                }
        }

/********************************
 * Language grammar starts here *
 ********************************/
  static final public LinkedList<Translate.Frag> Program() throws ParseException {
    LinkedList<Translate.Frag> frags = new LinkedList<Translate.Frag>();
    Translate.Frag frag = null;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DATAFRAG:
      case PROCFRAG:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DATAFRAG:
        frag = DataFrag();
                          frags.add(frag);
        break;
      case PROCFRAG:
        frag = ProcFrag();
                          frags.add(frag);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return frags;}
    throw new Error("Missing return statement in function");
  }

  static final public Translate.Frag DataFrag() throws ParseException {
    Token name = null;
    Token num = null;
    String s = new String();
    jj_consume_token(DATAFRAG);
    jj_consume_token(LPAREN);
    jj_consume_token(DOT);
    jj_consume_token(DATA);
                   s = s + "\t.data\n";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOT:
      jj_consume_token(DOT);
      jj_consume_token(ALIGN);
                          s = s + "\t.align";
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        num = jj_consume_token(NUM);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
            if (null == num) s = s + "\n"; else s = s + " " + num.image + "\n";
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    name = jj_consume_token(ID);
    jj_consume_token(COLON);
                          s = s + name.image + ":\n";
    if (jj_2_2(2)) {
      jj_consume_token(DOT);
      jj_consume_token(ASCIZ);
      name = jj_consume_token(STRINGVAL);
          s = s.substring(0,s.length() - 1)
          + "\t.asciiz\t" + name.image;
    } else {
      label_2:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(DOT);
        jj_consume_token(WORD);
        name = jj_consume_token(ID);
           s = s + "\t.word " + name.image + "\n";
      }
    }
    jj_consume_token(RPAREN);
      {if (true) return new Translate.DataFrag(s);}
    throw new Error("Missing return statement in function");
  }

  static final public Translate.Frag ProcFrag() throws ParseException {
    Frame.Frame frame = null;
        List<Assem.Instr> code = new LinkedList<Assem.Instr>();
        Assem.Instr instr;
    jj_consume_token(PROCFRAG);
    jj_consume_token(LPAREN);
    frame = Frame();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MOVE:
      case OPER:
      case LABEL:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      instr = Instr();
                            code.add(instr);
    }
    jj_consume_token(RPAREN);
      {if (true) return new Translate.ProcFrag(code, frame);}
    throw new Error("Missing return statement in function");
  }

  static final public Frame.Frame Frame() throws ParseException {
    Token name, maxArg;
    Mips.MipsFrame frame = null;

    LinkedList formals = null;
    LinkedList actuals = null;
    jj_consume_token(MIPSFRAME);
    jj_consume_token(LPAREN);
    name = jj_consume_token(ID);
    jj_consume_token(COLON);
                          frame = new Mips.MipsFrame(); frame.name = new Temp.Label(name.image);
    formals = FormalList();
                             frame.formals = formals;
    actuals = FormalList();
                             frame.actuals = actuals;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BADPTR:
      jj_consume_token(BADPTR);
      jj_consume_token(LPAREN);
      name = jj_consume_token(ID);
      jj_consume_token(RPAREN);
        if (!(frame.badPtr().toString().equals(name.image)))
                   System.err.println("badPtr name does not match! " + name.image);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BADSUB:
      jj_consume_token(BADSUB);
      jj_consume_token(LPAREN);
      name = jj_consume_token(ID);
      jj_consume_token(RPAREN);
        if (!(frame.badSub().toString().equals(name.image)))
                   System.err.println("badSub name does not match! " + name.image);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAXARG:
      jj_consume_token(MAXARG);
      jj_consume_token(LPAREN);
      maxArg = jj_consume_token(NUM);
      jj_consume_token(RPAREN);
            ((Mips.MipsFrame)frame).maxArgOffset = new Integer(maxArg.toString());
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
          {if (true) return frame;}
    throw new Error("Missing return statement in function");
  }

  static final public LinkedList FormalList() throws ParseException {
    LinkedList list = new LinkedList();
    Token t = null;
    String s;
    int tempNum = 0;
    Frame.Access access = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FORMALS:
      jj_consume_token(FORMALS);
      break;
    case ACTUALS:
      jj_consume_token(ACTUALS);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LPAREN);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INREG:
      case INFRAME:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INREG:
        access = InReg();
                             list.add(access);
        break;
      case INFRAME:
        access = InFrame();
                               list.add(access);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RPAREN);
          {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  static final public Frame.Access InReg() throws ParseException {
    Token t;
    String s;
    int tempNum;
    jj_consume_token(INREG);
    jj_consume_token(LPAREN);
    t = jj_consume_token(ID);
    jj_consume_token(RPAREN);
                 s = t.image.substring(1);
                 tempNum = parseInt(s);
                 {if (true) return new Mips.InReg(getTemp(tempNum));}
    throw new Error("Missing return statement in function");
  }

  static final public Frame.Access InFrame() throws ParseException {
    Token t;
    jj_consume_token(INFRAME);
    jj_consume_token(LPAREN);
    t = jj_consume_token(NUM);
    jj_consume_token(RPAREN);
            {if (true) return new Mips.InFrame(parseInt(t.image));}
    throw new Error("Missing return statement in function");
  }

  static final public Assem.Instr Instr() throws ParseException {
        Assem.Instr instr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MOVE:
      instr = MOVE();
      break;
    case OPER:
      instr = OPER();
      break;
    case LABEL:
      instr = LABEL();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return instr;}
    throw new Error("Missing return statement in function");
  }

  static final public Assem.Instr LABEL() throws ParseException {
        Assem.Instr instr;
        Temp.Temp[] d = null, s = null;
        Token t = null;
    jj_consume_token(LABEL);
    jj_consume_token(LPAREN);
    t = jj_consume_token(STRINGVAL);
    jj_consume_token(RPAREN);
          String str = t.image.substring(1, t.image.length()-1);
          {if (true) return new Assem.LABEL(str + ":", getLabel(str));}
    throw new Error("Missing return statement in function");
  }

  static final public Assem.Instr MOVE() throws ParseException {
        Assem.Instr instr;
        Temp.Temp[] d = null, s = null;
        Token str = null;
    jj_consume_token(MOVE);
    jj_consume_token(LPAREN);
    str = jj_consume_token(STRINGVAL);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DEFS:
      case USES:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case USES:
        s = Uses();
        break;
      case DEFS:
        d = Defs();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RPAREN);
          {if (true) return new Assem.MOVE(str.image.substring(1,str.image.length()-1),
                                                                d[0], s[0]);}
    throw new Error("Missing return statement in function");
  }

  static final public Assem.Instr OPER() throws ParseException {
        Assem.Instr instr;
        Temp.Temp[] d = null, s = null;
        List<Temp.Label> j = null;
        Token str = null;
    jj_consume_token(OPER);
    jj_consume_token(LPAREN);
    str = jj_consume_token(STRINGVAL);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DEFS:
      case USES:
      case JUMPS:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case USES:
        s = Uses();
        break;
      case DEFS:
        d = Defs();
        break;
      case JUMPS:
        j = Jumps();
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RPAREN);
          {if (true) return new Assem.OPER(str.image.substring(1,str.image.length()-1), Arrays.asList(d), Arrays.asList(s), j);}
    throw new Error("Missing return statement in function");
  }

  static final public Temp.Temp[] Uses() throws ParseException {
        List<Temp.Temp> uses = new LinkedList<Temp.Temp>();
        Token t;
    jj_consume_token(USES);
    jj_consume_token(LPAREN);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      t = jj_consume_token(ID);
                     uses.add(getTemp(parseInt(t.image.substring(1))));
    }
    jj_consume_token(RPAREN);
          {if (true) return uses.toArray(new Temp.Temp[1]);}
    throw new Error("Missing return statement in function");
  }

  static final public Temp.Temp[] Defs() throws ParseException {
        List<Temp.Temp> defs = new LinkedList<Temp.Temp>();
        Token t;
    jj_consume_token(DEFS);
    jj_consume_token(LPAREN);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_8;
      }
      t = jj_consume_token(ID);
                     defs.add(getTemp(parseInt(t.image.substring(1))));
    }
    jj_consume_token(RPAREN);
          {if (true) return defs.toArray(new Temp.Temp[1]);}
    throw new Error("Missing return statement in function");
  }

  static final public List<Temp.Label> Jumps() throws ParseException {
        List<Temp.Label> jumps = new LinkedList<Temp.Label>();
        Token t;
    jj_consume_token(JUMPS);
    jj_consume_token(LPAREN);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_9;
      }
      t = jj_consume_token(ID);
                     jumps.add(getLabel(t.image));
    }
    jj_consume_token(RPAREN);
          {if (true) return jumps;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(WORD)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(ASCIZ)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ReadAssemTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[19];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xc0000,0xc0000,0x0,0x40,0x70000000,0x800000,0x1000000,0x8000000,0x600000,0x6000000,0x6000000,0x70000000,0x80000000,0x80000000,0x80000000,0x80000000,0x0,0x0,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x4,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x1,0x1,0x3,0x3,0x8,0x8,0x8,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[2];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public ReadAssem(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ReadAssem(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ReadAssemTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public ReadAssem(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ReadAssemTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public ReadAssem(ReadAssemTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(ReadAssemTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[37];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 19; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 37; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

  static private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 2; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
            case 1: jj_3_2(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  static private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

    }
